--- a/robotx_communication/package.xml
+++ b/robotx_communication/package.xml
@@ -10,7 +10,8 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
-  <depend>robotx_msgs</depend>
+  <depend>tcp_sender</depend>
+  <depend>ament_cmake_auto</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ouxt_lint_common</test_depend>
