--- a/mock_server/package.xml
+++ b/mock_server/package.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>robotx_communication</name>
+  <name>mock_server</name>
   <version>0.0.0</version>
-  <description>Communication protocol implementation for Maritime RobotX Challenge.</description>
+  <description>TODO: Package description</description>
   <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>
-  <license>Apache License 2.0</license>
+  <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>rclcpp</depend>
-  <depend>rclcpp_components</depend>
-  <depend>tcp_sender</depend>
-  <depend>geographic_msgs</depend>
-
   <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ouxt_lint_common</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
