--- a/robotx_communication/CMakeLists.txt
+++ b/robotx_communication/CMakeLists.txt
@@ -11,6 +11,10 @@ ament_auto_find_build_dependencies()
 ament_auto_add_library(technical_director_network_bridge_component SHARED
   src/technical_director_network_bridge_component.cpp
 )
+target_compile_definitions(technical_director_network_bridge_component
+  PRIVATE "ROBOTX_COMMUNICATION_TECHNICAL_DIRECTOR_NETWORK_BRIDGE_COMPONENT_BUILDING_DLL")
+rclcpp_components_register_nodes(navi_sim_component
+  "robotx_communication::TechnicalDirectorNetworkBridgeComponent")
 
 ament_auto_add_executable(technical_director_network_bridge_node
   src/technical_director_network_bridge_node.cpp
