fix compile errors
Signed-off-by: MasayaKataoka <ms.kataoka@gmail.com>

--- a/robotx_communication/CMakeLists.txt
+++ b/robotx_communication/CMakeLists.txt
@@ -13,7 +13,7 @@ ament_auto_add_library(technical_director_network_bridge_component SHARED
 )
 target_compile_definitions(technical_director_network_bridge_component
   PRIVATE "ROBOTX_COMMUNICATION_TECHNICAL_DIRECTOR_NETWORK_BRIDGE_COMPONENT_BUILDING_DLL")
-rclcpp_components_register_nodes(navi_sim_component
+rclcpp_components_register_nodes(technical_director_network_bridge_component
   "robotx_communication::TechnicalDirectorNetworkBridgeComponent")
 
 ament_auto_add_executable(technical_director_network_bridge_node
