--- a/robotx_communication/package.xml
+++ b/robotx_communication/package.xml
@@ -13,6 +13,7 @@
   <depend>rclcpp_components</depend>
   <depend>tcp_sender</depend>
   <depend>geographic_msgs</depend>
+  <depend>boost</depend>
   <exec_depend>mock_server</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
