--- a/robotx_msgs/CMakeLists.txt
+++ b/robotx_msgs/CMakeLists.txt
@@ -9,6 +9,13 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
+rosidl_generate_interfaces(${PROJECT_NAME}
+  msg/AutonomousMaritimeSystemStatus.msg
+  msg/UnmannedAerialVehicleStatus.msg
+  #DEPENDENCIES builtin_interfaces
+)
+ament_export_dependencies(rosidl_default_runtime)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   ament_lint_auto_find_test_dependencies()
